Добавила темную тему

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -70,5 +70,54 @@
   "choose_from_gallery": "Choose from gallery",
   "mark_as_read": "Hide",
   "open_chat": "Open chat",
-  "change": "Change"
+  "change": "Change",
+  "upload_ent_certificate": "Please upload the Unified National Testing certificate in the 'Upload Documents' section. Without this certificate your result will not be counted.",
+  "upload": "Upload",
+  "file_attached": "File attached",
+  "male": "Male",
+  "gender": "Gender",
+  "noNotifications": "No notifications",
+  "markAsRead": "Hide",
+  "dorm_info": "Dormitory Information",
+  "name_not_found": "No name",
+  "description": "Description",
+  "description_not_found": "No description available",
+  "dorm_price_10_months": "Price for 10 months",
+  "total_places": "Number of places",
+  "address": "Address",
+  "address_not_specified": "Not specified",
+  "location_map": "Location map",
+  "open_map": "Open map",
+  "chatbot": "ChatBot",
+  "send_message_hint": "Enter message",
+  "operator": "Operator",
+  "end_chat": "End Chat",
+  "psychological_test": "Psychological Test",
+  "question_not_found": "Questions not found",
+  "question_progress": "Question {current} of {total}",
+  "back": "Back",
+  "next": "Next",
+  "submit_test": "Submit Test",
+  "please_answer_all": "Please answer all questions",
+  "test_success": "Test submitted successfully!",
+  "main": "Home",
+  "confirm_logout": "Are you sure you want to log out?",
+  "our_dormitories": "Our dormitories",
+  "useful_info_students": "Useful for students",
+  "faq": "Frequently asked questions",
+  "faq_q1": "What is included in the cost of accommodation?",
+  "faq_a1": "Accommodation, utilities, use of kitchen and shower.",
+  "faq_q2": "How long can you stay in the Students' House?",
+  "faq_a2": "For the entire period of study, subject to the rules.",
+  "faq_q3": "Who can get a dormitory place?",
+  "faq_a3": "Students who have applied and passed the selection.",
+  "faq_q4": "How is the settlement process?",
+  "faq_a4": "An order is issued and a rental agreement is concluded. Registration is done through the dean's office. Unauthorized settlement is prohibited.",
+  "faq_q5": "How can I pay for accommodation?",
+  "faq_a5": "Payment is made through the university payment system or bank.",
+  "faq_q6": "What rules must I follow?",
+  "faq_a6": "Observe silence, cleanliness, respect for neighbors and property.",
+  "faq_q7": "What happens if the rules are violated?",
+  "faq_a7": "Warning, fine, or eviction depending on the severity."
+
 }
