--- a/lib/l10n/app_ru.arb
+++ b/lib/l10n/app_ru.arb
@@ -53,8 +53,9 @@
   "attach_payment_screenshot": "Прикрепить скрин оплаты",
   "upload_success": "Скриншот успешно загружен.",
   "profile": "Профиль",
-  "faq": "Часто задаваемые вопросы",
-  "useful_info_students": "Полезное для студентов",
+  "chatbot": "ЧатБот",
+  "send_message_hint": "Введите сообщение",
+  "end_chat": "Завершить чат",
   "select_language": "Выберите язык",
   "status_no_application": "Вы ещё не подали заявку.",
   "go_to_application": "Перейти к заявке",
@@ -72,5 +73,50 @@
   "choose_from_gallery": "Выбрать из галереи",
   "mark_as_read": "Скрыть",
   "open_chat": "Открыть чат",
-  "change": "Изменить"
+  "change": "Изменить",
+  "upload_ent_certificate": "Пожалуйста, загрузите сертификат ЕНТ в разделе «Загрузить документы». Без этого сертификата ваш результат не будет засчитан.",
+  "upload": "Загрузите",
+  "file_attached": "Файл прикреплён",
+  "male": "Мужской",
+  "gender": "Пол",
+  "noNotifications": "Нет новых уведомлений",
+  "markAsRead": "Скрыть",
+  "dorm_info": "Информация об общежитии",
+  "name_not_found": "Без названия",
+  "description": "Описание",
+  "description_not_found": "Описание отсутствует",
+  "dorm_price_10_months": "Стоимость за 10 месяцев",
+  "total_places": "Количество мест",
+  "address": "Адрес",
+  "address_not_specified": "Не указано",
+  "location_map": "Карта расположения",
+  "open_map": "Открыть карту",
+  "psychological_test": "Психологический тест",
+  "question_not_found": "Вопросы не найдены",
+  "question_progress": "Вопрос {current} из {total}",
+  "back": "Назад",
+  "next": "Далее",
+  "submit_test": "Отправить тест",
+  "please_answer_all": "Пожалуйста, ответьте на все вопросы",
+  "test_success": "Тест успешно отправлен!",
+  "main": "Главная",
+  "confirm_logout": "Вы уверены, что хотите выйти?",
+  "our_dormitories": "Наши общежития",
+  "useful_info_students": "Полезное для студентов",
+  "faq": "Часто задаваемые вопросы",
+  "faq_q1": "Что входит в стоимость проживания?",
+  "faq_a1": "Проживание, коммунальные услуги, пользование кухней и душем.",
+  "faq_q2": "Как долго можно проживать в Доме студентов?",
+  "faq_a2": "На протяжении всего периода обучения при соблюдении правил.",
+  "faq_q3": "Кто может получить место в общежитии?",
+  "faq_a3": "Студенты, подавшие заявление и прошедшие отбор",
+  "faq_q4": "Как происходит процесс заселения?",
+  "faq_a4": "Издается приказ и заключается договор аренды. Регистрация осуществляется через деканат. Самовольное заселение запрещено",
+  "faq_q5": "Как оплатить проживание?",
+  "faq_a5": "Оплата производится через платежную систему университета или банк",
+  "faq_q6": "Какие правила необходимо соблюдать?",
+  "faq_a6": "Соблюдать тишину, чистоту, уважение к соседям и имуществу",
+  "faq_q7": "Что будет, если правила будут нарушены?",
+  "faq_a7": "Предупреждение, штраф или выселение в зависимости от тяжести"
+
 }
