--- a/lib/l10n/app_kk.arb
+++ b/lib/l10n/app_kk.arb
@@ -21,7 +21,7 @@
   "submit": "Жіберу",
   "surname": "Тегі",
   "useful_info": "Пайдалы ақпарат",
-  "dorm_price_10_months": "10 айға баға",
+  "dorm_price_10_months": "10 айлық бағасы",
   "parent_phone": "Ата-ананың нөмірі",
   "delete_avatar": "Аватарды жою",
   "dorm_canteen": "Асхана",
@@ -70,5 +70,55 @@
   "choose_from_gallery": "Галереядан таңдау",
   "mark_as_read": "Жасыру",
   "open_chat": "Чатты ашу",
-  "change": "Өзгерту"
+  "change": "Өзгерту",
+  "upload_ent_certificate": "ҰБТ сертификатын «Құжаттарды жүктеп салу» бөліміне жүктеп салыңыз. Бұл сертификатсыз сіздің нәтижеңіз есептелмейді.",
+  "upload": "Жүктеу",
+  "file_attached": "Файл тіркелген",
+  "male": "Ер",
+  "gender": "Жынысы",
+  "noNotifications": "Жаңа хабарландырулар жоқ",
+  "markAsRead": "Жасыру",
+  "dorm_info": "Жатақхана туралы ақпарат",
+  "name_not_found": "Атауы жоқ",
+  "description": "Сипаттама",
+  "description_not_found": "Сипаттама жоқ",
+  "dorm_price_10_months": "10 айға баға",
+  "total_places": "Орын саны",
+  "address": "Мекенжай",
+  "address_not_specified": "Көрсетілмеген",
+  "location_map": "Орын картасы",
+  "open_map": "Картаны ашу",
+  "chatbot": "ЧатБот",
+  "send_message_hint": "Хабарлама енгізіңіз",
+  "operator": "Оператор",
+  "end_chat": "Аяқтау",
+  "psychological_test": "Психологиялық тест",
+  "question_not_found": "Сұрақтар табылмады",
+  "question_progress": "{total} сұрақтың {current}-сі",
+  "back": "Артқа",
+  "next": "Келесі",
+  "submit_test": "Тесті жіберу",
+  "please_answer_all": "Барлық сұрақтарға жауап беріңіз",
+  "test_success": "Тест сәтті жіберілді!",
+  "main": "Басты бет",
+  "confirm_logout": "Шығуды шынымен қалайсыз ба?",
+  "our_dormitories": "Біздің жатақханалар",
+  "useful_info_students": "Студенттер үшін пайдалы",
+  "faq": "Жиі қойылатын сұрақтар",
+  "faq_q1": "Тұрғын үй құнына не кіреді?",
+  "faq_a1": "Тұрғын үй, коммуналдық қызметтер, ас үй мен душты пайдалану.",
+  "faq_q2": "Студенттер үйінде қанша уақыт тұра аласыз?",
+  "faq_a2": "Ережелерге сәйкес оқудың барлық кезеңі үшін.",
+  "faq_q3": "Кім жатақханадан орын ала алады?",
+  "faq_a3": "Өтініш берген және іріктеуден өткен студенттер.",
+  "faq_q4": "Есептесу процесі қалай жүріп жатыр?",
+  "faq_a4": "Бұйрық шығарылып, жалдау шарты жасалды. Тіркеу деканат арқылы жүргізіледі. Рұқсатсыз есеп айырысуларға тыйым салынады.",
+  "faq_q5": "Тұрғын үй ақысын қалай төлей аламын?",
+  "faq_a5": "Төлем университеттің төлем жүйесі немесе банк арқылы жүзеге асырылады.",
+  "faq_q6": "Қандай ережелерді сақтауым керек?",
+  "faq_a6": "Тыныштықты, тазалықты, көршілер мен мүлікті сыйлауды сақтаңыз.",
+  "faq_q7": "Ережелер бұзылса не болады?",
+  "faq_a7": "Ескерту, айыппұл немесе ауырлық дәрежесіне қарай шығару."
+
+
 }
