--- a/lib/l10n/app_kk.arb
+++ b/lib/l10n/app_kk.arb
@@ -118,7 +118,22 @@
   "faq_q6": "Қандай ережелерді сақтауым керек?",
   "faq_a6": "Тыныштықты, тазалықты, көршілер мен мүлікті сыйлауды сақтаңыз.",
   "faq_q7": "Ережелер бұзылса не болады?",
-  "faq_a7": "Ескерту, айыппұл немесе ауырлық дәрежесіне қарай шығару."
-
+  "faq_a7": "Ескерту, айыппұл немесе ауырлық дәрежесіне қарай шығару.",
+  "status_no_application": "Өтініш табылмады. Өтінім жіберіңіз.", 
+  "go_to_application": "Қолданбаға өту", 
+  "status_test_not_passed": "Сіз әлі сынақтан өткен жоқсыз.", 
+  "take_test": "Тест тапсыру", 
+  "status_pending": "Сіздің өтінішіңіз қаралуда.", 
+  "status_rejected": "Сіздің өтінішіңіз қабылданбады.", 
+  "status_awaiting_payment": "Сіздің өтінішіңіз мақұлданды. Төлем скриншотыңызды тіркеңіз.", 
+  "attach_payment_screenshot": "Төлем скриншотын тіркеу", 
+  "send": "Жіберу", 
+  "status_awaiting_order": "Төлем алынды. Тапсырысыңызды күтіңіз.", 
+  "status_order": "Тапсырыс берілді",
+  "unknown_status": "Белгісіз күй",
+  "noMessages": "Хабарламалар жоқ",
+  "admin": "Әкімші",
+  "enterMessage": "Хабарлама енгізіңіз…",
+  "birth_date": "Туылған күні:"
 
 }
