--- a/lib/l10n/app_ru.arb
+++ b/lib/l10n/app_ru.arb
@@ -117,6 +117,22 @@
   "faq_q6": "Какие правила необходимо соблюдать?",
   "faq_a6": "Соблюдать тишину, чистоту, уважение к соседям и имуществу",
   "faq_q7": "Что будет, если правила будут нарушены?",
-  "faq_a7": "Предупреждение, штраф или выселение в зависимости от тяжести"
+  "faq_a7": "Предупреждение, штраф или выселение в зависимости от тяжести",
+  "status_no_application": "Заявка не найдена. Пожалуйста, отправьте заявку.",
+  "go_to_application": "Перейти к заявке",
+  "status_test_not_passed": "Вы еще не прошли тест.",
+  "take_test": "Пройти тест",
+  "status_pending": "Ваша заявка находится на рассмотрении.",
+  "status_rejected": "Ваша заявка отклонена.",
+  "status_awaiting_payment": "Ваша заявка одобрена. Пожалуйста, приложите скриншот платежа.",
+  "attach_payment_screenshot": "Прикрепите скриншот платежа",
+  "send": "Отправить",
+  "status_awaiting_order": "Платеж получен. Ожидайте ваш заказ.",
+  "status_order": "Заказ оформлен",
+  "unknown_status": "Неизвестный статус",
+  "noMessages": "Нет сообщений",
+  "admin": "Администратор",
+  "enterMessage": "Введите сообщение…",
+  "birth_date": "Дата рождения: "
 
 }
